--- a/index.htm
+++ b/index.htm
@@ -7,11 +7,23 @@
     <title>o meu projeto</title>
 </head>
 <body>
-    <h1>Joana Gonçalves</h1> 
+    <font color="#800000"><h1>Joana Gonçalves</h1></font>
     <p>Olá, sou a Joana e venho de Barcelos.</p>
-    <p>Neste momento estudo na Universidade Lusofa do Porto no curso de comunicação audovisul e multimedia.</p>
-    <p>Pretendo seguir produção devido a uma grande admiração que tenho pelo mundo das artes perfomativas, no entanto tenho um <font color="red">GRANDE </font>medo de palco...</p>
+    <p> Tenho 20 anos e estudo na Universidade Lusofa do Porto no curso de comunicação audovisul e multimedia.</p>
+    <p></p>
+    <img src="foto cartão.jpeg" alt="Girl in a jacket" width="200" height="300">
+    <p></p>
+    <p>Pretendo seguir produção devido a uma grande admiração que tenho pelo mundo das artes perfomativas, no entanto tenho um <b>GRANDE</b> medo de palco...</p>
     <p>Adoro cinema e da minhas sagas preferidas é Marvel e Harry potter, ou seja, sou uma pequena "geek" em formação.</p>
-    <img src="irman1.1.jpg" alt="">
+    <p></p>
+    <img src="irman1.1.jpg" alt="Girl in a jacket" width="300" height="200">   <img src="harrypt2.jpeg" alt="Girl in a jacket" width="150" height="200">   
+    <body bgcolor="white"></body>
+    <p></p>
+    <p>Para além das artes no digital, crescedo numa familia de musicos amadores, criei um especial carinho pelo mundo da musica. Seguir produção musical não está totalmente fora dos planos para um futuro profissional. </p>
+   <p></p>
+    <audio controls autoplay muted>
+        <source src="Gama - Borboletas 🦋 [Video Oficial].mp3"audio/ogg">
+        <source src="Gama - Borboletas 🦋 [Video Oficial].mp3"audio>
+      </audio>
 </body>
 </html>
